2015-10-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitodvi.c (ParseSpecs): Avoid to return the address of a
	local variable, even when the result is discarded.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop tests for strerror(), vprintf(), and
	sizeof(int); add AC_TYPE_INT16_T etc.
	* types.h: Drop unused HAVE_VPRINTF; use int16_t etc.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitodvi.c: Avboid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-11-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviselect.c: Delay opening output until a page is selected.
	* seetexk.test: More tests with stdin and stdout.

	* dviconcat.c: Drop '#include <kpathsea/c-auto.h>'.

2013-11-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c, tempfile.c:
	include <kpathsea/config.h> in order to define DOSISH on W32.
	In previous binaries, SET_BINARY() is not effective on W32,
	because DOSISH is not defined.

2013-11-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* seetexk.test: Add a test for dviselect creating 0 pages.
	* tests/playnot.2 (new): Additional test output.
	* Makefile.am: Add the new test output.

2013-11-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dviselect.c: Remove dvi files with 0 pages.

2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviselect.c, types.h: Replace bcopy(f, t, l) =>
	memcpy(t, f, l).

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dviconcat.c: Replace bcmp() => memcmp().
	* search.c: Replace bcopy(f, t, l) => memcpy(t, f, l) and
	bzero(s, l) => memset(s, 0, l).

	* error.c, fio.c, gripes0.c, gripes1.c: Include <config.h> and
	<kpathsea/config.h> always first.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
